# UbuntuDownloader

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
application/: CMakeLists.txt
application/include/: Httpclient.hpp.in  IHttpclient.hpp.in  IParser.hpp.in  Parser.hpp.in  dummy.hpp.in  functions.hpp.in  httpclient.hpp.in
application/source/: Httpclient.cpp  Parser.cpp  dummy.cpp  functions.cpp  httpclient.cpp  main.cpp
cmake/: ConfigureCompiler.cmake  CreateLibrary.cmake  CreateUT.cmake  FindSphinx.cmake  InstallRequirements.cmake  SyncSubmodules.cmake
docs/: CMakeLists.txt  Doxyfile.in  requirements.txt
docs/source/: conf.py  index.rst
tests/: CMakeLists.txt  requirements.txt
